--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--==================== CSS ====================-->
   <link rel="stylesheet" href="assets/CSS/styles.css">
 
-  <title>Web Dev & Artist - Pauline Rouger</title>
+  <title>Web Dev - Pauline Rouger</title>
   <link rel="icon" href="assets/img/PR_logo_white.png">
 
 </head>
@@ -27,6 +27,7 @@
   <header class="header" id="header">
     <nav class="nav container">
       <a href="#" class="nav__logo"><img src="assets/img/PR_logo.png" alt="PR Logo" style="width:50px;height:50px;"></a>
+
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list grid">
           <li class="nav__item">
@@ -44,14 +45,14 @@
               <i class="uil uil-file-alt nav__icon"></i> Skills
             </a>
           </li>
-          <!-- <li class="nav__item">
-            <a href="#services" class="nav__link">
-              <i class="uil uil-briefcase-alt nav__icon"></i> Services
-            </a>
-          </li> -->
           <li class="nav__item">
             <a href="#portfolio" class="nav__link">
-              <i class="uil uil-scenery nav__icon"></i> Portfolio
+              <i class="uil uil-briefcase-alt nav__icon"></i> Portfolio
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#testimonial" class="nav__link">
+              <i class="uil uil-scenery nav__icon"></i> Testimonial
             </a>
           </li>
           <li class="nav__item">
@@ -142,7 +143,7 @@
         build relationships along the way.
       </p>
 
-      <div class="about__info">
+      <!-- <div class="about__info">
         <div>
           <span class="about__info-title">02+</span>
           <span class="about__info-name">Years <br> working experience </span>
@@ -157,7 +158,7 @@
           <span class="about__info-title">03+</span>
           <span class="about__info-name">Completed <br> projects </span>
         </div>
-      </div>
+      </div> -->
       <div class="about__buttons">
         <a download="" href="assets/pdf/pauline_rouger_resume.pdf" class="button button--flex">
           Download CV <i class="uil uil-download-alt button__icon"></i>
@@ -568,7 +569,7 @@
     <h2 class="section__title">Portfolio</h2>
     <span class="section__subtitle">Most Recent Project</span>
 
-    <div class="portfolio__container container swiper">
+    <div class="portfolio__container container swiper-container">
       <div class="swiper-wrapper">
         <!--======================== PORTFOLIO 1 =============-->
         <div class="portfolio__content grid swiper-slide">
@@ -642,12 +643,12 @@
 </section>
 
 <!--==================== PROJECT IN MIND ====================-->
-<!-- <section class="project section">
+<section class="project section">
     <div class="project__bg">
         <div class="project__container container grid">
             <div class="project__data">
                 <h2 class="project__title">You have a new project</h2>
-                <p class="project__description">Contact me now and get a 30% discount on your new project!</p>
+                <p class="project__description">Contact me now!</p>
                 <a href="#contact" class="button button--flex button--white">
                     Contact Me
                     <i class="uil uil-message project__icon button__icon"></i>
@@ -657,98 +658,92 @@
             <img src="assets/img/project.png" alt="" class="project__img">
         </div>
     </div>
-</section> -->
+</section>
 
 
     <!--==================== TESTIMONIAL ====================-->
     <section class="testimonial section">
       <h2 class="section__title">Testimonial</h2>
-        <span class="section__subtitle">What people saying about me</span>
+      <span class="section__subtitle">What people saying about me</span>
 
-        <!--==================== TESTIMONIAL 1 ====================-->
-        <div class="testimonial__content">
-          <div class="testimonal__data">
-            <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+      <div class="testimonial__container container swiper-container">
+          <div class="swiper-wrapper">
+              <!--=============== TESTIMONIAL 1 ===============-->
+              <div class="testimonial__content swiper-slide">
+                  <div class="testimonial__data">
+                      <div class="testimonial__header">
+                          <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
 
-            <div>
-              <h3 class="testimonial__name">Eric Cholet</h3>
-              <span class="testimonal__title">IT Manager & Developer</span>
-            </div>
-          </div>
-          <!-- <div>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-          </div> -->
-          <p class="testimonial_description">Pauline has all the requirements to be able to work on Web Dev project: an open mind and a good sens of analysis. Due to great experiences in different fields, she has the ability to understand the needs of a customer and provide quality web services.</p>
-        </div>
-
-        <!--==================== TESTIMONIAL 2 ====================-->
-        <div class="testimonial__content">
-          <div class="testimonal__data">
-            <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
-
-            <div>
-              <h3 class="testimonial__name">Julian Harrington</h3>
-              <span class="testimonal__title">Program Manager at Le Wagon</span>
-            </div>
-          </div>
-          <!-- <div>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-          </div> -->
-          <p class="testimonial_description">Pauline's drive for results, inquisitive nature, and incredible work ethic made her a remarkable student at Le Wagon. Her range of experience and technical prowess ensures she would be a wonderful addition to any team.</p>
-        </div>
-
-        <!--==================== TESTIMONIAL 3====================-->
-        <div class="testimonial__content">
-          <div class="testimonal__data">
-            <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
-
-            <div>
-              <h3 class="testimonial__name">Mathieu Longé</h3>
-              <span class="testimonal__title">Software Engineer @99designs</span>
-            </div>
-          </div>
-          <!-- <div>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-            <i class="uil uil-star testimonal__icon-star"></i>
-          </div> -->
-          <p class="testimonial_description">Pauline's ...</p>
-        </div>
-
-                <!--==================== TESTIMONIAL 4====================-->
-                <div class="testimonial__content">
-                  <div class="testimonal__data">
-                    <img src="assets/img/testimonial4.jpg" alt="" class="testimonial__img">
-        
-                    <div>
-                      <h3 class="testimonial__name">Morgan Hughes</h3>
-                      <span class="testimonal__title">Branding & Web consultant - Senior Graphic Designer</span>
-                    </div>
+                          <div>
+                              <h3 class="testimonial__name">Eric Cholet</h3>
+                              <span class="testimonial__client">IT Manager & Developer</span>
+                          </div>
+                      </div>
                   </div>
-                  <!-- <div>
-                    <i class="uil uil-star testimonal__icon-star"></i>
-                    <i class="uil uil-star testimonal__icon-star"></i>
-                    <i class="uil uil-star testimonal__icon-star"></i>
-                    <i class="uil uil-star testimonal__icon-star"></i>
-                    <i class="uil uil-star testimonal__icon-star"></i>
-                  </div> -->
-                  <p class="testimonial_description">When Pauline told me she was going through a career change in digital I definitely supported her move.
-                    She has all the skills to thrive in Web Development. She is technically minded and very adaptable. Through her previous job she had to to teamwork and collaboration on a daily basis.
-                    We worked together on her business website to start her business, she had no experience in Web Dev, she really impressed me with her critical thinking, creativity, and problem-solving. Her attention to detail was remarkable.
-                    To sum up, Pauline is very social and has a positive mindset, she will be a real asset for any tech company.</p>
-                </div>
-        
-    </section>
+
+                  <p class="testimonial__description">Pauline has all the requirements to be able to work on Web Dev project: an open mind and a good sens of analysis. Due to great experiences in different fields, she has the ability to understand the needs of a customer and provide quality web services.
+                  </p>
+              </div>
+
+              <!--=============== TESTIMONIAL 2 ===============-->
+              <div class="testimonial__content swiper-slide">
+                  <div class="testimonial__data">
+                      <div class="testimonial__header">
+                          <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
+
+                          <div>
+                              <h3 class="testimonial__name">Julian Harrington</h3>
+                              <span class="testimonial__client">Program Manager at Le Wagon</span>
+                          </div>
+                      </div>
+                  </div>
+
+                  <p class="testimonial__description">Pauline's drive for results, inquisitive nature, and incredible work ethic made her a remarkable student at Le Wagon. Her range of experience and technical prowess ensures she would be a wonderful addition to any team.
+                  </p>
+              </div>
+
+              <!--=============== TESTIMONIAL 3 ===============-->
+              <div class="testimonial__content swiper-slide">
+                  <div class="testimonial__data">
+                      <div class="testimonial__header">
+                          <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+
+                          <div>
+                              <h3 class="testimonial__name">Mathieu Longé</h3>
+                              <span class="testimonial__client">Software Engineer @99designs</span>
+                          </div>
+                      </div>
+                  </div>
+
+                  <p class="testimonial__description">Talented and passionate!
+                      I had the pleasure of having Pauline as a student during her Web Development Bootcamp at Le Wagon. I was particularly impressed by Pauline's strong growth mindset and ability to learn quickly. At the end of the Bootcamp, she built a web application on Ruby and Rails with two other students. Their goal was to help refugees find critical local resources in communities around Australia. The result was astonishing; it was great to see Pauline working so well with a team!
+                      I cannot recommend Pauline enough; any team will be very lucky to have her!
+                  </p>
+              </div>
+
+              <!--=============== TESTIMONIAL 4 ===============-->
+              <div class="testimonial__content swiper-slide">
+                  <div class="testimonial__data">
+                      <div class="testimonial__header">
+                          <img src="assets/img/testimonial4.jpg" alt="" class="testimonial__img">
+
+                          <div>
+                              <h3 class="testimonial__name">Morgan Hughes</h3>
+                              <span class="testimonial__client">Branding & Web consultant - Senior Graphic Designer</span>
+                          </div>
+                      </div>
+                  </div>
+
+                  <p class="testimonial__description">When Pauline told me she was going through a career change in digital I definitely supported her move.
+                      She has all the skills to thrive in Web Development. She is technically minded and very adaptable. Through her previous job she had to to teamwork and collaboration on a daily basis.
+                      We worked together on her business website to start her business, she had no experience in Web Dev, she really impressed me with her critical thinking, creativity, and problem-solving. Her attention to detail was remarkable.
+                      To sum up, Pauline is very social and has a positive mindset, she will be a real asset for any tech company.
+                  </p>
+              </div>
+          </div>
+          <div class="swiper-pagination swiper-pagination-testimonial"></div>
+      </div>
+  </section>
 
     <!--==================== CONTACT ME ====================-->
   <section class="contact section" id="contact">
