--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </li>
           <li class="nav__item">
             <a href="#contact" class="nav__link">
-              <i class="uil uil-estate nav__icon"></i> Contact Me
+              <i class="uil uil-estate nav__icon"></i> Contact
             </a>
           </li>
         </ul>
@@ -109,7 +109,7 @@
       <div class="home__data">
         <h1 class="home__title">Welcome, I'm Pauline !</h1>
         <h3 class="home__subtitle">Full-Stack Developer</h3>
-        <p class="home__description">High level experience in web application development and producing quality work.
+        <p class="home__description">High level experience in web application development and producing quality work. TO BE CHANGED
         </p>
         <a href="#contact" class="button button--flex">
           Contact Me <i class="uil uil-message button__icon"></i>
@@ -143,24 +143,9 @@
         build relationships along the way.
       </p>
 
-      <!-- <div class="about__info">
-        <div>
-          <span class="about__info-title">02+</span>
-          <span class="about__info-name">Years <br> working experience </span>
-        </div>
-
-        <div>
-          <span class="about__info-title">02+</span>
-          <span class="about__info-name">Companies <br> worked </span>
-        </div>
-
-        <div>
-          <span class="about__info-title">03+</span>
-          <span class="about__info-name">Completed <br> projects </span>
-        </div>
-      </div> -->
+      </div> 
       <div class="about__buttons">
-        <a download="" href="assets/pdf/pauline_rouger_resume.pdf" class="button button--flex">
+        <a download="" href="assets/PDF/pauline_rouger_resume.pdf" target="_blank" class="button button--flex">
           Download CV <i class="uil uil-download-alt button__icon"></i>
         </a>
       </div>
@@ -359,7 +344,7 @@
                     </div>
 
                     <div>
-                        <h3 class="qualification__title">Full-stack Web Developer Bootcamp</h3>
+                        <h3 class="qualification__title"> Web Developer Bootcamp</h3>
                         <span class="qualification__subtitle">Le wagon Australia</span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
@@ -392,7 +377,7 @@
                 <!--===============================QUALIFICATION 1 ===========================-->
                 <div class="qualification__data">
                     <div>
-                        <h3 class="qualification__title">Full-stack Web Developer</h3>
+                        <h3 class="qualification__title">Full-Stack Developer</h3>
                         <span class="qualification__subtitle">
                             <a href="https://www.cogini.com/" target="_blank">Cogini</a>
                         </span>
@@ -581,7 +566,7 @@
               Location based directory to connect refugees to find local resources in communities around Australia
             </p>
             <a href="https://www.aushello.com/" target="_blank" class="button button--flex button--small portfolio__button">
-                Demo
+              Demo
                 <i class="uil uil-arrow-right button__icon"></i>
             </a>
             <a href="https://github.com/PaulineTW/AUSHELLO" target="_blank" class="button button--flex button--small portfolio__button">
@@ -603,7 +588,7 @@
             <a href="http://privatekitchen.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
               Demo
               <i class="uil uil-arrow-right button__icon"></i>
-          </a>
+            </a>
             <a href="https://github.com/PaulineTW/private-kitchen" target="_blank" class="button button--flex button--small portfolio__button">
               Code
               <i class="uil uil-github button__icon"></i>
@@ -612,23 +597,21 @@
           </div>
         </div>
 
-        <!--======================== PORTFOLIO 3 =============-->
-        <!-- <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+        <!--=============== PORTFOLIO 3 ===============-->
+        <div class="portfolio__content grid swiper-slide">
+          <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
 
-            <div class="portfolio__data">
-                <h3 class="portfolio__title">Modern Website(3)</h3>
-                <p class="portfolio__description">
-                    This is test description(3) right now.
-                </p>
-                <a href="#" class="button button--flex button--small portfolio__button">
-                    Demo
-                    <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-            </div>
-        </div> -->
+          <div class="portfolio__data">
+              <h3 class="portfolio__title">Taiwan Camps</h3>
+              <p class="portfolio__description">Taiwan campsite platform where users can search all camping information and be part of campers’ community</p>
+              <a href="#" class="button button--flex button--small portfolio__button">
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+          </div>
+      </div>
+  </div>
 
-    </div>
     <!--============ Add Arrows =============-->
     <div class="swiper-button-next">
         <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
@@ -664,7 +647,7 @@
     <!--==================== TESTIMONIAL ====================-->
     <section class="testimonial section">
       <h2 class="section__title">Testimonial</h2>
-      <span class="section__subtitle">What people saying about me</span>
+      <span class="section__subtitle">What people say about me</span>
 
       <div class="testimonial__container container swiper-container">
           <div class="swiper-wrapper">
@@ -734,7 +717,7 @@
                       </div>
                   </div>
 
-                  <p class="testimonial__description">When Pauline told me she was going through a career change in digital I definitely supported her move.
+                  <p class="testimonial__description">
                       She has all the skills to thrive in Web Development. She is technically minded and very adaptable. Through her previous job she had to to teamwork and collaboration on a daily basis.
                       We worked together on her business website to start her business, she had no experience in Web Dev, she really impressed me with her critical thinking, creativity, and problem-solving. Her attention to detail was remarkable.
                       To sum up, Pauline is very social and has a positive mindset, she will be a real asset for any tech company.
@@ -745,73 +728,70 @@
       </div>
   </section>
 
-    <!--==================== CONTACT ME ====================-->
-  <section class="contact section" id="contact">
-    <h2 class="section__title">Contact Me</h2>
-    <span class="section__subtitle">Get in touch</span>
+            <!--==================== CONTACT ME ====================-->
+            <section class="contact section" id="contact">
+              <h2 class="section__title">Contact Me</h2>
+              <span class="section__subtitle">Get in touch</span>
 
-    <div class="contact__container container grid">
-        <div>
-            <div class="contact__information">
-                <i class="uil uil-phone contact__icon"></i>
+              <div class="contact__container container grid">
+                  <div>
+                      <div class="contact__information">
+                          <i class="uil uil-phone contact__icon"></i>
+                          <div>
+                              <h3 class="contact__title">Call Me</h3>
+                              <span class="contact__subtitle">+886-919484064</span>
+                          </div>
+                      </div>
 
-                <div>
-                    <h3 class="contact__title">Call Me</h3>
-                    <span class="contact__subtitle">+886-919484064</span>
-                </div>
-            </div>
+                      <div class="contact__information">
+                          <i class="uil uil-envelope contact__icon"></i>
+                          <div>
+                              <h3 class="contact__title">Email</h3>
+                              <span class="contact__subtitle">paulinerouge@hotmail.com</span>
+                          </div>
+                      </div>
 
-            <div class="contact__information">
-                <i class="uil uil-envelope contact__icon"></i>
+                      <div class="contact__information">
+                          <i class="uil uil-map-marker contact__icon"></i>
+                          <div>
+                              <h3 class="contact__title">Location</h3>
+                              <span class="contact__subtitle">Taipei, Taiwan</span>
+                          </div>
+                      </div>
+                  </div>
 
-                <div>
-                    <h3 class="contact__title">Email</h3>
-                    <span class="contact__subtitle">paulinerouge@hotmail.com</span>
-                </div>
-            </div>
+                  <form action="" class="contact__form grid">
+                      <div class="contact__inputs grid">
+                          <div class="contact__content">
+                              <label for="" class="contact__label">Name</label>
+                              <input type="text" class="contact__input">
+                          </div>
+                          <div class="contact__content">
+                              <label for="" class="contact__label">Email</label>
+                              <input type="email" class="contact__input">
+                          </div>
+                      </div>
+                      <div class="contact__content">
+                          <label for="" class="contact__label">Project</label>
+                          <input type="text" class="contact__input">
+                      </div>
+                      <div class="contact__content">
+                          <label for="" class="contact__label">Message</label>
+                          <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                      </div>
+                      
+                      <div>
+                          <a href="#" class="button button--flex">
+                              Send Message
+                              <i class="uil uil-message button__icon"></i>
+                          </a>
+                      </div>
+                  </form>
+              </div>
 
-            <div class="contact__information">
-                <i class="uil uil-map-marker contact__icon"></i>
+          </section>
+      </main>
 
-                <div>
-                    <h3 class="contact__title">Location</h3>
-                    <span class="contact__subtitle">Taipei, Taiwan</span>
-                </div>
-            </div>
-
-            <form action="" class="contact__form grid">
-                <div class="contact__inputs grid">
-                    <div class="contact__content">
-                        <label for="name" class="contact__label">Name</label>
-                        <input type="text" id="name" class="contact__input">
-                    </div>
-
-                    <div class="contact__content">
-                        <label for="email" class="contact__label">Email</label>
-                        <input type="email" id="email" class="contact__input">
-                    </div>
-                </div>
-
-                <div class="contact__content">
-                    <label for="project-contact" class="contact__label">Project</label>
-                    <input type="text" id="project-contact" class="contact__input">
-                </div>
-
-                <div class="contact__content">
-                    <label for="message-contact" class="contact__label">Message</label>
-                    <textarea name="" cols="0" rows="7" id="message-contact" class="contact__input"></textarea>
-                </div>
-
-                <div>
-                    <a href="#" class="button button--flex">Send Message</a>
-                    <i class="uil uil-message button__icon"></i>
-                </div>
-            </form>
-        </div>
-    </div>
-
-  </section>
-</main>
 
   <!--==================== FOOTER ====================-->
   <footer class="footer">
@@ -824,7 +804,7 @@
 
             <ul class="footer__links">
                 <li>
-                    <a href="#services" class="footer__link">Services</a>
+                    <a href="#skills" class="footer__link">Skills</a>
                 </li>
 
                 <li>
@@ -832,7 +812,7 @@
                 </li>
 
                 <li>
-                    <a href="#contact" class="footer__link">Contact Me</a>
+                    <a href="#contact" class="footer__link">Contact</a>
                 </li>
             </ul>
 
